# Qt-Quick-Music-Player

./: AudioInfoBox.qml  CMakeLists.txt  ImageButton.qml  Main.qml  PlaylistPanel.qml  README.md  SearchField.qml  SearchPanel.qml  audioinfo.cpp  audioinfo.h  audiosearchmodel.cpp  audiosearchmodel.h  main.cpp  playercontroller.cpp  playercontroller.h
